Favicon and metatags added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nikita Nikitin &ac; Omen666 &ac; Web Developer">
     <meta name="author" content="Nick Omen">
+    <link rel=”author” href=”https://plus.google.com/101085151009642547266”/>
 
     <title>Nick Omen - junior web developer.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- SOCIALS -->
+    <meta property="og:title" content="Nick Omen" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://nick-omen.com/" />
+    <meta property="og:description" content="Web developer portfolio." />
 
     <!-- Theme styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
