Added photo and sitemap

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://nick-omen.com/" />
     <meta property="og:description" content="Web developer portfolio." />
+    <meta property="og:image" content="omg/photo.jpg" />
 
     <!-- Theme styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -78,6 +79,21 @@
   ga('send', 'pageview');
 
 </script>
+<div style="display: none;" itemscope itemtype="http://schema.org/Person">
+    <span itemprop="name">Nikita Nikitin</span>
+    <img src="img/photo.jpg" itemprop="image" alt="Photo of Nikita Nikitin"/>
+    <span itemprop="jobTitle">Web Developer</span>
+    <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <span itemprop="addressCountry">Kyrgyzstan</span>
+        <span itemprop="addressLocality">Bishkek</span>
+        <span itemprop="postalCode">720000</span>
+    </div>
+    <span itemprop="telephone">+996 (555) 900-375</span>
+    <span itemprop="email">nikita.omen666@gmail.com</span>
+    <a href="http://www.nick-omen.com" itemprop="url">nick-omen.com</a>
+</div>
+
+</div>
     <portfolio>Loading...</portfolio>
 </body>
 </html>
