--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Nick Omen - junior web developer.</title>
+
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="preconnect" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="//fonts.googleapis.com">
+
+    <!-- SOCIALS -->
     <meta name="description" content="Nikita Nikitin &ac; Omen666 &ac; Web Developer">
     <meta name="author" content="Nick Omen">
     <link rel=”author” href=”https://plus.google.com/101085151009642547266”/>
 
-    <title>Nick Omen - junior web developer.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- SOCIALS -->
     <meta property="og:title" content="Nick Omen"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content="http://nick-omen.com/"/>
@@ -18,8 +22,7 @@
     <meta property="og:image" content="omg/photo.jpg"/>
 
     <!-- Theme styles -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" type="text/css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'>
@@ -28,119 +31,123 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="static/css/creative.css" type="text/css">
 
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <!-- Plugin JavaScript -->
-    <script src="static/js/lib.js" type="text/javascript"></script>
-
 
 </head>
 
 <body class="page-top">
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-64772002-2', 'auto');
-    ga('send', 'pageview');
+        ga('create', 'UA-64772002-2', 'auto');
+        ga('send', 'pageview');
+    </script>
 
-</script>
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="cover"></div>
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Nick Omen</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contacts</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-<header id="page-top">
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1>Nick omen</h1>
-            <hr>
-            <h2>Work harder bitch</h2>
-            <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
-        </div>
-    </div>
-</header>
-<section id="person" class="overflowed">
-    <div class="container">
-        <div class="row person" itemscope itemtype="http://schema.org/Person">
-            <div class="col-md-6 text-center">
-                <div class="person__photo"><img src="img/photo.jpg" class="img-responsive" alt="Photo of Nikita Nikitin" itemprop="image"></div>
-                <span class="person__name" itemprop="name">Nick Nikitin</span> <br>
-                <span class="person__job" itemprop="jobTitle">Web Developer</span>
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="cover"></div>
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Nick Omen</a>
             </div>
-            <div class="col-md-6">
-                <a href="mailto:nikita.omen666@gmail.com" class="person__email" itemprop="email">nikita.omen666@gmail.com</a> <br>
-                <a href="tel:+996555900375" class="person__phone" itemprop="telephone">+996 (555) 900-375</a> <br>
-                <a href="http://www.nick-omen.com" class="person__website" target="_blank" itemprop="url">www.nick-omen.com</a> <br>
-                <div class="person__address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                    <span itemprop="postalCode">720000</span>
-                    <span itemprop="addressCountry">Kyrgyzstan</span>
-                    <span itemprop="addressLocality">Bishkek</span>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <header id="page-top">
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1>Nick omen</h1>
+                <hr>
+                <h2>Work harder bitch</h2>
+                <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
+            </div>
+        </div>
+    </header>
+    <section id="person" class="overflowed">
+        <div class="container">
+            <div class="row person" itemscope itemtype="http://schema.org/Person">
+                <div class="col-md-6 text-center">
+                    <div class="person__photo"><img src="img/photo.jpg" class="img-responsive" alt="Photo of Nikita Nikitin" itemprop="image"></div>
+                    <span class="person__name" itemprop="name">Nick Nikitin</span> <br>
+                    <span class="person__job" itemprop="jobTitle">Web Developer</span>
+                </div>
+                <div class="col-md-6">
+                    <a href="mailto:nikita.omen666@gmail.com" class="person__email" itemprop="email">nikita.omen666@gmail.com</a> <br>
+                    <a href="tel:+996555900375" class="person__phone" itemprop="telephone">+996 (555) 900-375</a> <br>
+                    <a href="http://www.nick-omen.com" class="person__website" target="_blank" itemprop="url">www.nick-omen.com</a> <br>
+                    <div class="person__address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                        <span itemprop="postalCode">720000</span>
+                        <span itemprop="addressCountry">Kyrgyzstan</span>
+                        <span itemprop="addressLocality">Bishkek</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="no-padding" id="portfolio">
-    <div class="container-fluid">
-        <div class="row no-gutter" id="work-container">
-        </div>
-    </div>
-</section>
-<section id="message">form</section>
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Contact me now!</h2>
-                <hr class="primary">
-                <p>If you have a great idea and you know what do you want to create please contact me and we will
-                    discuss details.</p>
-            </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
-                <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                <p>+996 555 900-375</p>
-            </div>
-            <div class="col-lg-4 text-center">
-                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p><a href="nikita.omen666@gmail.com">nikita.omen666@gmail.com</a></p>
+    </section>
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter" id="work-container">
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <!-- <section id="message">form</section> -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Contact me now!</h2>
+                    <hr class="primary">
+                    <p>If you have a great idea and you know what do you want to create please contact me and we will
+                        discuss details.</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <p>+996 555 900-375</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p><a href="nikita.omen666@gmail.com">nikita.omen666@gmail.com</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    
+    <script>
+        if (!window.jQuery) { 
+            document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
+            document.write('<script src="static/js/lib.js" type="text/javascript"><\/script>');
+        } else {
+            document.write('<script src="static/js/lib.js" type="text/javascript"><\/script>');
+        }
+    </script>
 </body>
 </html>
