--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>Nick omen</h1>
                 <hr>
-                <h2>Work harder bitch</h2>
+                <h2>Do better.</h2>
                 <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
             </div>
         </div>
