--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <h1>Nick omen</h1>
                 <hr>
                 <h2>Do better.</h2>
+		<div>Site is in development.</div>
                 <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
             </div>
         </div>
