--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     <header id="page-top">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Nick omen</h1>
+                <h1>Nikita Nikitin</h1>
                 <hr>
-                <h2>Do better.</h2>
-		<div>Site is in development.</div>
+                <h2>Junior Web Developer looking for an interesting jobs.</h2>
+                <h3>Eat. Sleep. Code. Repeat.</h3>
                 <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
             </div>
         </div>
@@ -140,11 +140,11 @@
           rel='stylesheet' type='text/css'>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="static/css/creative.css" type="text/css">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    
+
     <script>
-        if (!window.jQuery) { 
+        if (!window.jQuery) {
             document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
             document.write('<script src="static/js/lib.js" type="text/javascript"><\/script>');
         } else {
