--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="Nikita Nikitin &ac; Omen666 &ac; Web Developer">
     <meta name="author" content="Nick Omen">
     <link rel=”author” href=”https://plus.google.com/101085151009642547266”/>
+    <link rel="canonical" href="http://www.nick-omen.com">
 
     <meta property="og:title" content="Nick Omen"/>
     <meta property="og:type" content="article"/>
@@ -130,6 +131,34 @@
         ga('create', 'UA-64772002-2', 'auto');
         ga('send', 'pageview');
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (d, w, c) {
+            (w[c] = w[c] || []).push(function() {
+                try {
+                    w.yaCounter37515610 = new Ya.Metrika({
+                        id:37515610,
+                        clickmap:true,
+                        trackLinks:true,
+                        accurateTrackBounce:true
+                    });
+                } catch(e) { }
+            });
+
+            var n = d.getElementsByTagName("script")[0],
+                s = d.createElement("script"),
+                f = function () { n.parentNode.insertBefore(s, n); };
+            s.type = "text/javascript";
+            s.async = true;
+            s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+            if (w.opera == "[object Opera]") {
+                d.addEventListener("DOMContentLoaded", f, false);
+            } else { f(); }
+        })(document, window, "yandex_metrika_callbacks");
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/37515610" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="cover"></div>
         <div class="container-fluid">
@@ -189,6 +218,12 @@
                         <span itemprop="addressLocality">Bishkek</span>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="modal-mask close" id="work-modal">
+            <div class="modal-content container">
+                <div class="close">&times;</div>
+                <div class="modal-body"></div>
             </div>
         </div>
     </section>
