--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Nikita Nikitin - Web Developer from Kyrgyzstan | Omen666</title>
 
     <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23">
     <link rel="preconnect" href="//fonts.googleapis.com">
 
     <!-- SOCIALS -->
@@ -22,36 +23,31 @@
 
 </head>
 <body>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-64772002-2', 'auto');
-    ga('send', 'pageview');
-</script>
+<div id="app"></div>
 
 <!-- Custom Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Theme styles -->
-<link rel="stylesheet" href="static/css/portfolio.css" type="text/css">
+<link rel="stylesheet" href="static/portfolio/css/portfolio.css" type="text/css">
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<!-- React lib -->
+<script type="text/javascript" src="static/js/react/react.js"></script>
+<script type="text/javascript" src="static/js/react/react-dom.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
+<!-- jQuery -->
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script type="text/javascript">
     if (!window.jQuery) {
-        document.write('<script src="static/bower_components/jquery/dist/jquery.min.js"><\/script>');
+        document.write('<script type="text/javascript" src="static/bower_components/jquery/dist/jquery.min.js"><\/script>');
     }
 </script>
+
+<!-- React app -->
+<script type="text/babel" src="static/portfolio/js/app.js"></script>
+
 </body>
 </html>
