--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -194,7 +194,7 @@
             <div class="header-content-inner">
                 <h1>Nikita Nikitin</h1>
                 <hr>
-                <h2>Junior Web Developer looking for an interesting jobs.</h2>
+                <h2>Web Developer looking for an interesting jobs.</h2>
                 <h3>Eat. Sleep. Code. Repeat.</h3>
                 <a id="person-handler" href="#person" class="btn btn-primary btn-xl page-scroll">More About Me</a>
             </div>
