--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
-    <title>Nick Omen - junior web developer.</title>
+    <title>Nick Omen - Web Developer from Kyrgyzstan, Bishkek.</title>
 
     <link rel="dns-prefetch" href="//www.google-analytics.com">
     <link rel="preconnect" href="//fonts.googleapis.com">
