--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     <title>Nick Omen - Web Developer from Kyrgyzstan, Bishkek.</title>
 
-    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="preconnect" href="//www.google-analytics.com">
     <link rel="preconnect" href="//fonts.googleapis.com">
-    <link rel="preconnect" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="//maxcdn.bootstrapcdn.com">
+    <link rel="icon" href="./favicon.ico">
 
     <!-- SOCIALS -->
     <meta name="description" content="Nikita Nikitin &ac; Omen666 &ac; Web Developer">
@@ -20,7 +21,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:url" content="http://nick-omen.com/"/>
     <meta property="og:description" content="Web developer portfolio."/>
-    <meta property="og:image" content="omg/photo.jpg"/>
+    <meta property="og:image" content="./img/photo.jpg"/>
 
     <style>
         #overflowed {
@@ -110,7 +111,7 @@
 </head>
 
 <body class="page-top">
-    <link rel="import" href="img/icons.svg">
+    <link rel="import" href="./img/icons.svg">
 
     <div id="overflowed">
         <div class="loader"></div>
@@ -278,24 +279,15 @@
     </footer>
 
     <!-- Theme styles -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-          rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
-          rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700' href=""rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="static/css/creative.css" type="text/css">
+    <link rel="stylesheet" href="./static/css/styles.min.css" type="text/css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="static/js/scripts.min.js" type="text/javascript"></script>
 
-    <script>
-        if (!window.jQuery) {
-            document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
-            document.write('<script src="static/js/lib.js" type="text/javascript"><\/script>');
-        } else {
-            document.write('<script src="static/js/lib.js" type="text/javascript"><\/script>');
-        }
-    </script>
 </body>
 </html>
