--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <title>Nick Omen - Web Developer from Kyrgyzstan, Bishkek.</title>
 
-    <link rel="preconnect" href="//www.google-analytics.com">
-    <link rel="preconnect" href="//fonts.googleapis.com">
-    <link rel="preconnect" href="//maxcdn.bootstrapcdn.com">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
     <link rel="icon" href="./favicon.ico">
 
     <!-- SOCIALS -->
@@ -288,6 +288,6 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="static/js/scripts.min.js" type="text/javascript"></script>
-
+/e
 </body>
 </html>
