Add portfolio items

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nick Omen - Web Developer from Kyrgyzstan, Bishkek.</title>
 
     <link rel="dns-prefetch" href="//www.google-analytics.com">
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel=a"dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
     <link rel="icon" href="./favicon.ico">
 
