--- a/index.html
+++ b/index.html
@@ -248,21 +248,26 @@
                     <p><a href="mailto:nikita.omen666@gmail.com">nikita.omen666@gmail.com</a></p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-4 text-center socials-block">
-                    <a href="https://www.facebook.com/nikita.omen666" title="Nikita Nikitin on Facebook" target="_blank">
-                        <svg class="svg-icon svg-icon__socials">
-                            <use xlink:href="img/icons.svg#logoFacebook" />
-                        </svg>
-                    </a>
-                    <a href="https://github.com/Nick-Omen" title="Nikita Nikitin on Github" target="_blank">
-                        <svg class="svg-icon svg-icon__socials">
-                            <use xlink:href="img/icons.svg#logoGithub" />
-                        </svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/nikita-nikitin-b4a477110" title="Nikita Nikitin in LinkedIn" target="_blank">
-                        <svg class="svg-icon svg-icon__socials">
-                            <use xlink:href="img/icons.svg#logoLinkedin" />
-                        </svg>
-                    </a>
+                    <div id="socials">
+                        <a href="https://www.facebook.com/nikita.omen666" title="Nikita Nikitin on Facebook" target="_blank">
+                            <svg class="svg-icon svg-icon__socials">
+                                <use xlink:href="img/icons.svg#logoFacebook" />
+                            </svg>
+                        </a>
+                        <a href="https://github.com/Nick-Omen" title="Nikita Nikitin on Github" target="_blank">
+                            <svg class="svg-icon svg-icon__socials">
+                                <use xlink:href="img/icons.svg#logoGithub" />
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/nikita-nikitin-b4a477110" title="Nikita Nikitin on LinkedIn" target="_blank">
+                            <svg class="svg-icon svg-icon__socials">
+                                <use xlink:href="img/icons.svg#logoLinkedin" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="links">
+                        <a href="https://www.upwork.com/fl/nick13" title="Nikita Nikitin on UpWork" target="_blank">Upwork Profile</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -284,10 +289,12 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700' href=""rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./static/css/styles.min.css" type="text/css">
+    <!-- <link rel="stylesheet" href="./static/css/styles.min.css" type="text/css"> -->
+    <link rel="stylesheet" href="./static/css/creative.css" type="text/css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="static/js/scripts.min.js" type="text/javascript"></script>
-/e
+    <!-- <script src="static/js/scripts.min.js" type="text/javascript"></script> -->
+    <script src="static/js/lib.js" type="text/javascript"></script>
+<span id="quit">/destroy</span>
 </body>
 </html>
